--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-react-jsx": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "cross-env": "^3.1.4",
@@ -34,8 +34,8 @@
     "stylint-loader": "^1.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^2.4.0",
-    "webpack": "2.2.0",
-    "webpack-dev-server": "^1.16.2",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1",
     "webpack-merge": "^2.6.1",
     "webpack-notifier": "^1.5.0"
   },
