Use /ws as websocket endpoint;

--- a/app/game-master/config.json
+++ b/app/game-master/config.json
@@ -1,6 +1,6 @@
 {
     "server-endpoint": {
-        "uri": "${protocol}//${hostname}:3001/",
+        "uri": "${protocol}//${hostname}/ws",
         "timeout": 500
     }
 }
